fixes wrap when bigger

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -93,6 +93,7 @@ header {
     display: flex;
     flex-direction: column;
     overflow: scroll;
+    height: 100%;
 }
 
 .content h3 {
@@ -105,8 +106,13 @@ header {
     width: 90%;
     margin: 0 auto;
     outline: 2px solid orange;
+    background-color: orange;
     /* flex-wrap: wrap; */
 } 
+
+figure {
+
+}
 
 figure img {
     width: 100%;
@@ -149,6 +155,15 @@ footer {
 
 .h1-container h4 {
     font-size: 20px;
+}
+
+figure {
+    width: 25%;
+}
+.img-block {
+    /* flex-direction: unset; */
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 footer {
